# treevee

./: .gitignore  LICENSE  README.md  config.example.toml  evorun_config.example.toml  pyproject.toml  treevee_config.example.toml
evorun/: evorun.py  tree_search.py
evorun/webapp/: server.py
evorun/webapp/js/: tree-viz.js
examples/label_placement/: TASK.md  eval.py  pixi.toml
examples/voigt_approx/: TASK.md  eval.py  pixi.toml
examples/voigt_approx/experiment/: config.py  voigt.py
tests/: test_sandbox.py
treevee/: __init__.py  tree_search.py  treevee.py
treevee/engine/: search_node.py
treevee/utils/: metric.py  response.py
treevee/webapp/: index.html  server.py
treevee/webapp/css/: style.css
treevee/webapp/js/: app.js  charts.js  diff-viewer.js  state-loader.js  tree-viz.js
