[project]
name = "treevee"
version = "0.1.0"
description = "LLM-driven iterative codebase optimization with Monte Carlo Tree Search"
requires-python = ">=3.10"
dependencies = [
    "dataclasses-json",
    "numpy",
    "pyyaml",
    "toml",
    "zerobox>=0.2.6 ; sys_platform == 'darwin'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
treevee = "treevee:main"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
pytest = "*"

[tool.hatch.build]
include = ["treevee"]

[tool.pixi.pypi-dependencies]
treevee = { path = ".", editable = true }
